<resources>
    <string name="app_name">Sacoco</string>

    <!-- Activity main string literals-->
    <string name="main_activity_menu_home">Accueil</string>
    <string name="main_activity_menu_clothes_list">Vêtements</string>
    <string name="main_activity_menu_settings">Paramètres</string>
    <string name="main_activity_menu_email">Mail</string>
    <string name="main_activity_title_base">Sacoco -\u0020%1$s</string>

    <!-- Card string literals-->
    <string name="card_icon">Card icon</string>
    <string name="card_check_icon">Card check icon</string>
    <string name="card_bag_name_title">Sac de la semaine :</string>
    <string name="card_base_text">%1$s - %2$s</string>
    <string name="card_consult_button_text">Consulter</string>
    <string name="card_remove_button_text">Supprimer</string>

    <!-- Add bag dialog string literals -->
    <string name="dialog_add_bag_title">Ajouter un sac</string>
    <string name="dialog_date_start_hint">Start date</string>
    <string name="dialog_date_end_hint">End date</string>
    <string name="dialog_add_clothes_to_bag">Ajouter des vêtements</string>
    <string name="dialog_confirm_add_bag">Ajouter</string>
    <string name="dialog_confirm_cancel_add_bag">Annuler</string>

    <!-- Add cloth dialog string literals-->
    <string name="dialog_add_cloth_title">Ajouter un vêtement</string>
    <string name="dialog_add_cloth_identifier_title">Identifiant du vêtement</string>
    <string name="dialog_add_cloth_identifier_hint">Identifiant</string>
    <string name="dialog_add_cloth_cloth_image_title">Photo du vêtement</string>
    <string name="dialog_add_cloth_cloth_name_title">Nom du vêtement</string>
    <string name="dialog_add_cloth_cloth_name_hint">Nom</string>
    <string name="dialog_add_cloth_cloth_type_title">Type du vêtement</string>
    <string name="dialog_add_cloth_cloth_type_hint">Type</string>
    <string name="dialog_confirm_add_cloth">Ajouter</string>
    <string name="dialog_confirm_cancel_add_cloth">Annuler</string>

    <!-- Show cloth details dialog string literals -->
    <string name="dialog_show_cloth_details_cloth_image_title">Photo du vêtement</string>
    <string name="dialog_show_cloth_details_modify_image_button">Modifier</string>
    <string name="dialog_show_cloth_details_cloth_name_title">Nom du vêtement</string>
    <string name="dialog_show_cloth_details_cloth_name_hint">Nom</string>
    <string name="dialog_show_cloth_details_cloth_type_title">Type du vêtement</string>
    <string name="dialog_show_cloth_details_cloth_type_hint">Type</string>
    <string name="dialog_show_cloth_details_save_button">Enregistrer</string>
    <string name="dialog_show_cloth_details_cancel_button">Annuler</string>
    <string name="dialog_show_cloth_title">Modifier un vêtement</string>

    <!-- Bag content fragment string literals -->
    <string name="fragment_bag_content_title">Sac semaine %1$d</string>
    <string name="fragment_bag_content_check_bag">Vérifier</string>
    <string name="fragment_bag_content_modify">Modifier</string>
    <string name="fragment_bag_content_remove_cloth">Supprimer un vêtement</string>

    <!-- Add cloth to bag string literals -->
    <string name="dialog_add_cloth_to_bag_title">Ajouter des vêtements au sac</string>
    <string name="dialog_add_cloth_to_bag_add_button">Ajouter</string>
    <string name="dialog_add_cloth_to_bag_cloth_name">Nom du vêtement</string>
    <string name="dialog_add_cloth_to_bag_cloth_uuid">123e4567-e89b-12d3-a456-426614174000</string>
    <string name="dialog_add_cloth_to_bag_close">Annuler</string>

    <!-- Base fragment string literals -->
    <string name="fragment_base_add_description">Add</string>

    <!-- Camera fragment string literals -->
    <string name="fragment_camera_take_picture">Capturer</string>

    <!-- Email fragment string literals -->
    <string name="fragment_email_not_implemented">Non implémenté dans la version 1.0.0</string>

    <!-- Preferences string literals -->
    <string name="preferences_category_appearance">Apparence de l\'application</string>
    <string name="preferences_theme">Thème sombre / Thème clair</string>
    <string name="preferences_category_version">Versionnage</string>
    <string name="preferences_app_version">Version de l\'application</string>
    <string name="preferences_category_about_app">A propos de l\'application</string>
    <string name="preferences_cgu">Conditions générales d\'utilisation</string>
    <string name="preferences_category_qrcode">QR code</string>
    <string name="preferences_qrcode_generation">Générer un QR code</string>
    <string name="preferences_category_language">Langue</string>
    <string name="preferences_language">Modifier la langue de l\'application</string>
</resources>
