<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/preferences_category_appearance"
        android:icon="@drawable/style">

        <SwitchPreference
            android:defaultValue="false"
            android:key="appearance"
            android:title="@string/preferences_theme" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/preferences_category_version"
        android:icon="@drawable/phone">

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="appVersion"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:enabled="false"
            android:title="@string/preferences_app_version" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_category_about_app"
        android:icon="@drawable/info">

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="appCGU"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:enabled="false"
            android:title="@string/preferences_cgu" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_category_qrcode"
        android:icon="@drawable/qr_code">

        <Preference
            android:key=""
            android:title="@string/preferences_qrcode_generation"
            android:selectable="true"
            android:clickable="true" />
    </PreferenceCategory>
</PreferenceScreen>
