<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/main_activity_menu_home" />
    <item
        android:id="@+id/clothes_list"
        android:enabled="true"
        android:icon="@drawable/clothes_list"
        android:title="@string/main_activity_menu_clothes_list" />
    <item
        android:id="@+id/email"
        android:enabled="true"
        android:icon="@drawable/email"
        android:title="@string/main_activity_menu_email" />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/main_activity_menu_settings" />
</menu>